--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -11,7 +11,7 @@
 
   <script>
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
+      apiKey: 'gibby',
       authDomain: "YOUR_PROJECT.firebaseapp.com",
       databaseURL: "https://cs131-final-project-49b00-default-rtdb.firebaseio.com",
       projectId: "cs131-final-project-49b00",
